# appgen

./: Cargo.toml  README.md
completions/: appgen.fish
src/: log_example.rs  main.rs
